src/tests/testfiles/unary-operators/types-2.txt
Error at 3:5: Logical not operator operand not compatible with char
!c;
^
